# clang-tooling-style

./: CMakeLists.txt  DisallowCoupling.cpp  DisallowCoupling.h  DisallowGlobals.cpp  DisallowGlobals.h  DisallowNewDelete.cpp  DisallowNewDelete.h  DisallowNonAbstract.cpp  DisallowNonAbstract.h  README.md  ResultPrinter.cpp  ResultPrinter.h  RuleChecker.cpp  RuleChecker.h  noglob.cpp  tool.cpp
tooltest/: runtest.py  testnewdelete.cpp  testnoglob.cpp
